[package]
name = "fltk_test"
version = "0.1.0"
edition = "2024"

[dependencies]
fltk = "^1.5"
fltk-theme = "0.7"
#winapi = { version = "0.3.9", cfg="windows" }
windows-registry =  { version = "0.5.1", cfg="windows" }

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = 'symbols'        # Strip symbols from binary*

#[target.x86_64-pc-windows-gnu]


